Prevent slight jump in final step of speech bubble loading animation

--- a/assets/sass/patterns/atoms/speech-bubble.scss
+++ b/assets/sass/patterns/atoms/speech-bubble.scss
@@ -107,7 +107,7 @@
     }
 
     to {
-      width: 75%;
+      width: 55%;
     }
 
   }
